@@ -2,38 +2,33 @@ PREFIX?=/usr/local
 MANPREFIX?=${PREFIX}/share/man
 STRIP?=strip
 
-default: map mapf
+default: map
 
 map: map.c
 	$(CC) -Wall -Os -o map map.c
 
-mapf: map
-	ln -s map mapf
-
 clean:
-	@echo cleaning
-	@rm -f map mapf
+	@echo Cleaning up
+	@rm -f map
 
-install: map mapf
-	@echo stripping executable
+install: map
+	@echo Stripping executable
 	@${STRIP} map
-	@echo installing executable to ${PREFIX}/bin
+	@echo Installing executable to ${PREFIX}/bin
 	@mkdir -p ${PREFIX}/bin
 	@cp -f map ${PREFIX}/bin/map
 	@chmod 755 ${PREFIX}/bin/map
-	@ln -sf ${PREFIX}/bin/map ${PREFIX}/bin/mapf
 
 	@echo installing manual pages to ${MANPREFIX}/man1
 	@mkdir -p ${MANPREFIX}/man1
 	@cp -f map.1 ${MANPREFIX}/man1/map.1
 	@chmod 644 ${MANPREFIX}/man1/map.1
-	@ln -sf ${MANPREFIX}/man1/map.1 ${MANPREFIX}/man1/mapf.1
 
 uninstall:
-	@echo removing executable from ${PREFIX}/bin
-	@rm ${PREFIX}/bin/map ${PREFIX}/bin/mapf
-	@echo removing manual pages from ${MANPREFIX}/man1
-	@rm ${MANPREFIX}/man1/map.1 ${MANPREFIX}/man1/mapf.1
+	@echo Removing executable from ${PREFIX}/bin
+	@rm -f ${PREFIX}/bin/map
+	@echo Removing manual pages from ${MANPREFIX}/man1
+	@rm -f ${MANPREFIX}/man1/map.1
 
 test:
 	@bash test/tests.sh
